# adaptive-dispatch

./: .gitignore  CMakeLists.txt  README.md  benchmark_results.py
src/: CMakeLists.txt  bandit.h  compile_switch.h  test.cpp
